third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/no-close-4.stderr
TOML parse error at line 1, column 25
  |
1 | no-close-4 = [{ key = 42
  |                         ^
invalid inline table
expected `}`
